se genero componente matricula, se hicieron modificaciones para restringir acceso a pagina de administracion

--- a/src/app/components/adjust/adjust.component.html
+++ b/src/app/components/adjust/adjust.component.html
@@ -1,15 +1,18 @@
 <nav-p  [identity]="identity"></nav-p>
 
-<div class="container" id="header">    <div class="row"><div class="col-md-12">
-  
-    <nav aria-label="breadcrumb" style="margin-bottom: 10px;">
-        <ol class="breadcrumb primary-color" style="    margin-right: 15px;
-        padding: 10px;
-        margin-bottom: 0;">
-          <li style="margin-left: 20px;"class="breadcrumb-item"><strong>Ajustes</strong></li>
-        </ol>
-    </nav>
-    </div></div>
+    <div class="container" id="header">    
+        <div class="row">
+            <div class="col-md-12">
+    
+            <nav aria-label="breadcrumb" style="margin-bottom: 10px;">
+                <ol class="breadcrumb primary-color" style="    margin-right: 15px;
+                    padding: 10px;
+                    margin-bottom: 0;">
+                    <li style="margin-left: 20px;"class="breadcrumb-item"><strong>Ajustes</strong></li>
+                </ol>
+            </nav>
+        </div>
+    </div>
     <div class="row">
         <div class="col-md-8">
             <div class="jumbotron">            
