--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,64 +1,7 @@
-<!--<div class="middle-box text-center loginscreen  animated fadeInDown">
-  <div>
-      <div>
-          <h1 class="logo-name">PREMATE</h1>
-      </div>
-      <h3>Bienvenido a PREMATE</h3>
-      <p>Perfectly designed and precisely prepared admin theme with over 50 pages with extra new web app views.
-      </p>
-      <p>Login in. To see it in action.</p>
-      <form class="m-t" role="form" action="#">
-          <div class="form-group">
-              <input type="email" class="form-control" placeholder="Rut" required="">
-          </div>
-          <div class="form-group">
-              <input type="password" class="form-control" placeholder="Clave" required="">
-          </div>
-          <button type="submit" class="btn btn-primary block full-width m-b">Ingresar</button>
-
-          <a ui-sref="forgot_password"><small>Olvidaste tu contraseña?</small></a>
-          <p class="text-muted text-center"><small>Aún no te matriculas?</small></p>
-          <a class="btn btn-sm btn-white btn-block" ui-sref="register" [routerLink]="['/register']">Matricúlate</a>
-      </form>
-      <p class="m-t"> <small>Inspinia we app framework base on Bootstrap 3 &copy; 2014</small> </p>
-  </div>
-</div>-->
-
-<!--
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
-            <div class="container">
-              <a class="navbar-brand js-scroll-trigger" href="#video"><img src="../../../assets/img/logos/premate-logo-cut.png" id="logopre"></a>
-              <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                Menu
-                <i class="fas fa-bars"></i>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarResponsive">
-                <ul class="navbar-nav text-uppercase ml-auto">
-                  <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#quienes_somos">¿Cómo te ayudamos?</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#testimonios">Testimonios</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#beca">Beca</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#contact">Más información</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" [routerLink]="['/login']">Login</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </nav>
-        -->
 <nav-p [identity]="identity"></nav-p>
-
 <div class="container" id="header">
     <div class="row"> 
-        <div class="col-sm-12 col-lg-8 col-md-12"> 
+        <div class="col-sm-12 col-lg-7 col-md-12"> 
             <div class="jumbotron">
                 <h3>{{ title }}</h3>
                 <div class="col-md-12 col-lg-12">
@@ -72,24 +15,34 @@
                         </div>
                     
                         <form #loginForm="ngForm" (ngSubmit)="onSubmit();" class="col-md-12 no-padding"> 
-                            
-                                <label>RUT:</label>  
-                                <input type="rut" class="form-control" name="rut" #rut="ngModel" [(ngModel)]="user.rut" required>
-                            
-                            <!--<span *ngIf="!rut.valid && rut.touched">El email no es válido</span>-->
-                            <div class="identity-alert alert alert-danger" *ngIf="!rut.valid && rut.touched">
-                                El rut no es válido
-                            </div>
-                           
-                                <label>Password:</label>  
-                                <input type="password" class="form-control" name="password" #password="ngModel" [(ngModel)]="user.password" required>
-                                <!--<span *ngIf="!password.valid && password.touched">La contraseña no es válida</span>-->
-                            
-                                <div class="identity-alert alert alert-danger" *ngIf="!password.valid && password.touched">
-                                    La contraseña no es válida
+                                <div class="form-row">
+                                    <div class="form-group col-md-10">
+                                        <label>RUT:</label>
+                                        <input type="rut" class="form-control" name="rut" #rut="ngModel" [(ngModel)]="user.rut" required>
+                                    </div>
+                                    <div class="form-group col-md-2">
+                                        <label>Dígito:</label>
+                                        <input type="dv" class="form-control" name="dv" #dv="ngModel" [(ngModel)]="user.digito_verificador" required>
+                                    </div>
                                 </div>
                             
-                    <br>
+                            
+                            <!--<span *ngIf="!rut.valid && rut.touched">El email no es válido</span>-->
+                            <br>
+                            <div class="identity-alert alert alert-danger" *ngIf="!rut.valid && rut.touched">
+                                El RUT no es válido
+                            </div>
+                           
+                            <label>Contraseña:</label>  
+                            <input type="password" class="form-control" name="password" #password="ngModel" [(ngModel)]="user.password" required>
+                            <!--<span *ngIf="!password.valid && password.touched">La contraseña no es válida</span>-->
+                            
+                            <br>
+                            <div class="identity-alert alert alert-danger" *ngIf="!password.valid && password.touched">
+                                La contraseña no es válida
+                            </div>
+                            
+                            <br>
                             <input type="submit" value="Entrar" class="btn btn-primary" style="background-color: #1FA0E5">
                     
                         </form>
@@ -103,7 +56,7 @@
 
             </div>
         </div>
-        <div class="col-sm-12 col-lg-4 col-md-12">
+        <div class="col-sm-12 col-lg-5 col-md-12">
             <div class="jumbotron">
                 <img src="http://noticias.universia.cl/net/images/educacion/b/ba/ban/banner.jpg" alt="..." width="200" class="Responsive image">
             </div>
