--- a/src/app/components/nav-p/nav-p.component.html
+++ b/src/app/components/nav-p/nav-p.component.html
@@ -32,6 +32,11 @@
             </ul>
             <ul class="navbar-nav ml-auto" *ngIf="identity != null" style="margin-right: 10%;">
                 <li class="nav-item">
+                    <a [routerLink]="['/matricula']" routerLinkActive="active" class="nav-link">
+                        <i class="fas fa-clipboard"></i> Matriculate
+                    </a>   
+                </li>
+                <li class="nav-item" *ngIf="identity.role == 'admin'">
                     <a [routerLink]="['/admin']" routerLinkActive="active" class="nav-link">
                         <i class="fas fa-clipboard"></i> Admin
                     </a>   
