se arreglaron detalles css, se crearon componentes restantes

--- a/src/app/components/admin/admin.component.html
+++ b/src/app/components/admin/admin.component.html
@@ -28,7 +28,7 @@
                                             <a class="list-group-item list-group-item-action active" id="list-unidad-list" data-toggle="list" href="#list-unidad" role="tab" aria-controls="home">Unidades</a>
                                             <a class="list-group-item list-group-item-action" id="list-profile-list" data-toggle="list" href="#list-profile" role="tab" aria-controls="profile">Capitulos</a>
                                             <a class="list-group-item list-group-item-action" id="list-messages-list" data-toggle="list" href="#list-messages" role="tab" aria-controls="messages">Videos</a>
-                                            <a class="list-group-item list-group-item-action" id="list-settings-list" data-toggle="list" href="#list-settings" role="tab" aria-controls="settings">Activar usuarios</a>
+                                            <!--<a class="list-group-item list-group-item-action" id="list-settings-list" data-toggle="list" href="#list-settings" role="tab" aria-controls="settings">Activar usuarios</a>-->
                                           </div>
                                         </div>
                                         <div class="col-8">
@@ -42,7 +42,7 @@
                                             <div class="tab-pane fade" id="list-messages" role="tabpanel" aria-labelledby="list-messages-list">
                                                 <app-admin-video></app-admin-video>
                                             </div>
-                                            <div class="tab-pane fade" id="list-settings" role="tabpanel" aria-labelledby="list-settings-list">...</div>
+                                            <!--<div class="tab-pane fade" id="list-settings" role="tabpanel" aria-labelledby="list-settings-list">...</div>-->
                                           </div>
                                         </div>
                                       </div>
@@ -70,43 +70,3 @@
             </div>
         </div>-->
     </div>
-    
-        <!-- Footer -->
-        <footer>
-    
-              <div class="row">
-                <div class="col-md-4">
-                  <span class="copyright">Copyright &copy; PREMATE 2019</span>
-                </div>
-                <div class="col-md-4">
-                  <ul class="list-inline social-buttons">
-                    <li class="list-inline-item">
-                      <a href="https://www.instagram.com/premate.cl/" target="_blank">
-                        <i class="fab fa-instagram"></i>
-                      </a>
-                    </li>
-                    <li class="list-inline-item">
-                      <a href="https://www.facebook.com/groups/459469204548498/" target="_blank">
-                        <i class="fab fa-facebook-f"></i>
-                      </a>
-                    </li>
-                    <li class="list-inline-item">
-                      <a href="#">
-                        <i class="fab fa-youtube"></i>
-                      </a>
-                    </li>
-                  </ul>
-                </div>
-                <!-- <div class="col-md-4">
-                  <ul class="list-inline quicklinks">
-                    <li class="list-inline-item">
-                      <a href="#">Privacy Policy</a>
-                    </li>
-                    <li class="list-inline-item">
-                      <a href="#">Terms of Use</a>
-                    </li>
-                  </ul>
-                </div> -->
-              </div>
-    
-          </footer>
