--- a/src/app/components/home-w/home-w.component.html
+++ b/src/app/components/home-w/home-w.component.html
@@ -1,7 +1,9 @@
 
 
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
+    <!--<nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">-->
+      
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar bg-dark">
       <div class="container">
         <a class="navbar-brand js-scroll-trigger" href="#video"><img src="../../../assets/img/logos/premate-logo-cut.png" id="logopre"></a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -11,19 +13,19 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav text-uppercase ml-auto">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#quienes_somos">¿Cómo te ayudamos?</a>
+              <a class="nav-link js-scroll-trigger py-0" href="#quienes_somos">¿Cómo te ayudamos?</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#testimonios">Testimonios</a>
+              <a class="nav-link js-scroll-trigger py-0" href="#testimonios">Testimonios</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#beca">Beca</a>
+              <a class="nav-link js-scroll-trigger py-0" href="#beca">Beca</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#contact">Más información</a>
+              <a class="nav-link js-scroll-trigger py-0" href="#contact">Más información</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="/login">Login</a>
+              <a class="nav-link js-scroll-trigger py-0" href="/login">Login</a>
             </li>
           </ul>
         </div>
@@ -33,7 +35,7 @@
     <!-- Header -->
       <header class="masthead" id = "video">
         <div class="container">
-          <div class="intro-text">
+          <div class="intro-text" style="padding-top: 85px; padding-bottom: 20px;">
             <div class="embed-responsive embed-responsive-16by9">
               <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/LAKgjzJ_ep0" allowfullscreen></iframe>
             </div>
