--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -5,15 +5,7 @@
             <div class="jumbotron">
                 <h3>{{ title }}</h3>
                 <div class="col-md-12 col-lg-12">
-                        <h3></h3>
-                        <div class="identity-alert alert alert-success" *ngIf="identity && identity.sub">
-                            !Te has identificado correctamente! Bienvenido <strong>{{ identity.name }} </strong>
-                        </div>
-                    
-                        <div class="identity-alert alert alert-danger" *ngIf="identity && identity.data">
-                            !No te has identificado correctamente! 
-                        </div>
-                    
+                
                         <form #loginForm="ngForm" (ngSubmit)="onSubmit();" class="col-md-12 no-padding"> 
                                 <div class="form-row">
                                     <div class="form-group col-md-10">
@@ -28,7 +20,7 @@
                             
                             
                             <!--<span *ngIf="!rut.valid && rut.touched">El email no es válido</span>-->
-                            <br>
+
                             <div class="identity-alert alert alert-danger" *ngIf="!rut.valid && rut.touched">
                                 El RUT no es válido
                             </div>
@@ -37,7 +29,7 @@
                             <input type="password" class="form-control" name="password" #password="ngModel" [(ngModel)]="user.password" required>
                             <!--<span *ngIf="!password.valid && password.touched">La contraseña no es válida</span>-->
                             
-                            <br>
+
                             <div class="identity-alert alert alert-danger" *ngIf="!password.valid && password.touched">
                                 La contraseña no es válida
                             </div>
@@ -56,11 +48,21 @@
 
             </div>
         </div>
-        <div class="col-sm-12 col-lg-5 col-md-12">
+       <!-- <div class="col-sm-12 col-lg-5 col-md-12">
             <div class="jumbotron">
-                <img src="http://noticias.universia.cl/net/images/educacion/b/ba/ban/banner.jpg" alt="..." width="200" class="Responsive image">
+                <img src="../../../assets/img/login/premate_publicidad.png" alt="..." width="200" class="Responsive image">
             </div>
-        </div>
+        </div>-->
+
+        <div class="col-md-4" style="padding-left:0 !important;">
+                <div class="col">
+                    <div class="jumbotron" style="padding: 5px !important; width: 111%;">
+                            <img src="../../../assets/img/login/premate_publicidad.png" alt="..." width="200" class="Responsive image">
+                    </div>
+                </div>
+            </div>
+
+
     </div>
 </div>
 
