--- a/src/app/components/matricula/matricula.component.html
+++ b/src/app/components/matricula/matricula.component.html
@@ -1,2 +1,56 @@
 <nav-p [identity]="identity"></nav-p>
-<h1>{{title}}</h1>
+<div class="container" id="header">
+    <div class="row"> 
+        <div class="col-sm-12 col-lg-7 col-md-12"> 
+            <div class="jumbotron">
+                <h3>{{ title }}</h3>
+                <div class="col-md-12 col-lg-12">
+                    <span>Ingresa el correo electrónico de la persona que realizará el pago.</span>
+                        <form #loginForm="ngForm" (ngSubmit)="onSubmit();" class="col-md-12 no-padding"> 
+                            <br>
+                            <div class="form-row">
+                                <div class="form-group col-md-10">
+                                    <label>RUT:</label>
+                                    <input type="rut" class="form-control" name="rut" #rut="ngModel" [(ngModel)]="user.rut" required>
+                                </div>
+                                <div class="form-group col-md-2">
+                                    <label>Dígito:</label>
+                                    <input type="dv" class="form-control" name="dv" #dv="ngModel" [(ngModel)]="user.digito_verificador" required>
+                                </div>
+                            </div>
+                            <br>
+                            <input type="hidden" name="buttonId" value="fa49d5dbb9a5d955784d8b9f0625c55c"/>
+                            <input type="image" src="https://www.transbank.cl/public/img/botonwebpay.gif"/>
+                        </form>
+
+                        <!--
+                        <form name="btnPago" method="post" action="https://webpay3g.transbank.cl/filtroUnificado/buttonService">
+                            <input type="hidden" name="buttonId" value="fa49d5dbb9a5d955784d8b9f0625c55c"/>
+                            <input type="image" src="https://www.transbank.cl/public/img/botonwebpay.gif"/>
+                        </form>-->
+
+
+                    </div><br>
+                    <div class="col-md-12 col-lg-12">
+                        ¿Ya estas matriculado? 
+                        <a [routerLink]="['/videos']" routerLinkActive="active" style="color: #1FA0E5">
+                            <i class="fas fa-video"></i> Videos.
+                        </a>
+                    </div>
+
+            </div>
+        </div>
+        <div class="col-sm-12 col-lg-5 col-md-12">
+            <div class="jumbotron">
+                BENEFICIOS DE ENCONTRARSE MATRICULADO.
+                <ul class="list-group">
+                    <li class="list-group-item"><i class="fas fa-check"></i> Cras justo odio</li>
+                    <li class="list-group-item"><i class="fas fa-check"></i> Dapibus ac facilisis in</li>
+                    <li class="list-group-item"><i class="fas fa-check"></i> Morbi leo risus</li>
+                    <li class="list-group-item"><i class="fas fa-check"></i> Porta ac consectetur ac</li>
+                    <li class="list-group-item"><i class="fas fa-check"></i> Vestibulum at eros</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
