--- a/src/app/components/revision/revision.component.html
+++ b/src/app/components/revision/revision.component.html
@@ -3,9 +3,9 @@
         <div class="row">
             <div class="col-md-12">
                 <nav aria-label="breadcrumb" style="margin-bottom: 10px;">
-                    <ol class="breadcrumb primary-color" style="margin-right: 15px; padding: 10px; margin-bottom: 0;">
+                    <ol class="breadcrumb primary-color" style="padding: 10px; margin-bottom: 0;">
                         <li style="margin-left: 20px;"class="breadcrumb-item">
-                            <a [routerLink]="['/videos']">Videos</a> / Capitulos / <strong>Lista</strong>
+                            <strong>Revisión</strong>
                         </li>
                     </ol>
                 </nav>
@@ -13,48 +13,25 @@
         </div>
 
         <div class="row">
-
-
-
-
-            <div class="col-md-12" style="padding-right: 30px !important;">
+            <div class="col-md-12">
                 <div class="jumbotron">
-                        <app-loading *ngIf="loading"></app-loading>
-                        <h2 class="bold">{{ title }}:</h2>
-                        <p class="font-italic">Seleccione uno de los siguientes videos para reproducir:</p>
-                        <div class="row">
-                            <div class="col-xs-12 col-md-4">
-                            <div class="list-group" id="list-tab" role="tablist">
-                                <a class="list-group-item list-group-item-action animated animatedFadeInUp fadeInUp" [class.active]="selectedVideo===video.id" *ngFor="let video of videos" id="hola{{ video.id }}" data-toggle="list" href="#{{ video.id }}" role="tab" aria-controls="home" (click)="selectedVideo = video.id">
-                                {{ video.nombre }}
-                                </a>
-                            </div>
-                            </div>
-                            <div class="col-xs-12 col-md-8">
-                            <div class="tab-content" id="nav-tabContent">
-                                <div *ngFor="let video of videos" class="animated animatedFadeInUp fadeInUp">
-                                    <h3 *ngIf="selectedVideo === video.id">
-                                        {{ video.nombre}}
-                                    </h3>
-                                    <div class="embed-responsive embed-responsive-4by3" *ngIf="selectedVideo === video.id" [id]="video.id" role="tabpanel" [attr.aria-labelledby]="'hola'+video.id">
-                                        
-                                        <iframe [src]=" video.url | safe" width="640" height="480" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-
-                                    </div>
-                                </div>
+                    <app-loading *ngIf="loading"></app-loading>
+                    <div class="col-md-12">
+                        <h2 class="bold">Revisión:</h2>
+                    </div>
+                    <div class="col-md-12">
+                        <p class="font-italic">Seleccione una de las siguientes revisiones:</p>
+                    </div>  
+                    <div class="row">
+                        <!-- ngFor -->
+                        <div class="card animated animatedFadeInUp fadeInUp" style="width: 15.7rem; margin: 6px; padding: 5px;" *ngFor="let revision of revisiones">
+                            <a [routerLink]="['/revision/lista',revision.id]"><img src="http://localhost:8000/uploads/revisiones/{{ revision.imagen }}" class="card-img-top" alt="..."></a>
+                            <div class="card-body">
+                                <a [routerLink]="['/revision/lista',revision.id]" ><h5 class="card-title">{{ revision.nombre }}</h5></a>
+                                <p class="card-text">{{ revision.descripcion }}</p>
+                                <a [routerLink]="['/revision/lista',revision.id]" class="btn btn-primary">Ingresar</a>
                             </div>
                         </div>
-                                    
-                        
-                        <!-- ngFor -->
-                        <!--<div class="card" style="width: 14rem; margin: 10px; padding: 5px;" *ngFor="let video of videos">
-                            <a [routerLink]="['/videos/detalle',video.id]"><img src="http://localhost:8000/uploads/videos/{{ video.urlImagen }}" class="card-img-top" alt="..."></a>
-                            <div class="card-body">
-                                <a [routerLink]="['/videos/detalle',video.id]" ><h5 class="card-title">{{ video.nombre }}</h5></a>
-                                <p class="card-text">{{ video.descripcion }}</p>
-                                <a [routerLink]="['/videos/detalle',video.id]" class="btn btn-primary">Ingresar</a>
-                            </div>
-                        </div>-->
                     </div>
                 </div>
 <!--
@@ -107,14 +84,20 @@
                 </div>
 
             -->
+                      
+                    
+
+
+
+
             
-            <div class="col-md-12" style="padding-left:0 !important; padding-right: 0px !important;">
-                <!--<div class="col">-->
+            <div class="col-md-12" style="padding-left:0 !important;">
+                <div class="col">
                     <div class="jumbotron" style="padding: 5px !important;">
-                        <img src="../../../assets/img/videos/3.png" alt="..." width="200" class="Responsive image">
+                        <img src="http://noticias.universia.cl/net/images/educacion/b/ba/ban/banner.jpg" alt="..." width="200" class="Responsive image">
                     </div>
-                <!--</div>-->
+                </div>
             </div>
         </div>
     </div>
-    </div>
+</div>
