--- a/src/app/components/videos/capitulosyvideos.component.html
+++ b/src/app/components/videos/capitulosyvideos.component.html
@@ -1,11 +1,12 @@
 <nav-p [identity]="identity"></nav-p>
+
     <div class="container" id="header">    
         <div class="row">
             <div class="col-md-12">
                 <nav aria-label="breadcrumb" style="margin-bottom: 10px;">
-                    <ol class="breadcrumb primary-color" style="margin-right: 15px; padding: 10px; margin-bottom: 0;">
+                    <ol class="breadcrumb primary-color" style="padding: 10px; margin-bottom: 0;">
                         <li style="margin-left: 20px;"class="breadcrumb-item">
-                            <strong>Videos</strong> / Unidades / Capitulos
+                            <a [routerLink]="['/videos']">Videos</a> / <strong>Capitulos</strong>
                         </li>
                     </ol>
                 </nav>
@@ -13,8 +14,9 @@
         </div>
 
         <div class="row">
-            <div class="col-md-12" style="padding-right: 30px !important;">
+            <div class="col-md-12">
                 <div class="jumbotron">
+                    <app-loading *ngIf="loading"></app-loading>
                     <div class="col-md-12">
                         <h2 class="bold">{{ title }}:</h2>
                     </div>
@@ -23,7 +25,7 @@
                     </div>  
                     <div class="row">
                         <!-- ngFor -->
-                        <div class="card" style="width: 14rem; margin: 10px; padding: 5px;" *ngFor="let capitulo of capitulos">
+                        <div class="card animated animatedFadeInUp fadeInUp"  style="width: 15.7rem; margin: 6px; padding: 5px;" *ngFor="let capitulo of capitulos">
                             <a [routerLink]="['/videos/lista',capitulo.id]"><img src="http://localhost:8000/uploads/capitulos/{{ capitulo.url }}" class="card-img-top" alt="..."></a>
                             <div class="card-body">
                                 <a [routerLink]="['/videos/lista',capitulo.id]" ><h5 class="card-title">{{ capitulo.nombre }}</h5></a>
@@ -90,51 +92,11 @@
 
 
             
-            <div class="col-md-12" style="padding-left:0 !important;">
-                <div class="col">
-                    <div class="jumbotron" style="padding: 5px !important;">
-                        <img src="http://noticias.universia.cl/net/images/educacion/b/ba/ban/banner.jpg" alt="..." width="200" class="Responsive image">
-                    </div>
+            <div class="col-md-12" style="padding-left:0 !important; padding-right: 0px !important;">
+                <div class="jumbotron" style="padding: 5px !important;">
+                    <img src="../../../assets/img/videos/2.png" alt="..." width="200" class="Responsive image">
                 </div>
             </div>
         </div>
     </div>
-    </div>
-
-    <footer>
-        <div class="row">
-            <div class="col-md-4">
-                <span class="copyright">Copyright &copy; PREMATE 2019</span>
-            </div>
-            <div class="col-md-4">
-                <ul class="list-inline social-buttons">
-                <li class="list-inline-item">
-                    <a href="https://www.instagram.com/premate.cl/" target="_blank">
-                    <i class="fab fa-instagram"></i>
-                    </a>
-                </li>
-                <li class="list-inline-item">
-                    <a href="https://www.facebook.com/groups/459469204548498/" target="_blank">
-                    <i class="fab fa-facebook-f"></i>
-                    </a>
-                </li>
-                <li class="list-inline-item">
-                    <a href="#">
-                    <i class="fab fa-youtube"></i>
-                    </a>
-                </li>
-                </ul>
-            </div>
-            <!-- <div class="col-md-4">
-                <ul class="list-inline quicklinks">
-                <li class="list-inline-item">
-                    <a href="#">Privacy Policy</a>
-                </li>
-                <li class="list-inline-item">
-                    <a href="#">Terms of Use</a>
-                </li>
-                </ul>
-            </div> -->
-            </div>
-
-        </footer>
+</div>
