--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -18,7 +18,7 @@ h1 {
     font-size: 30px;
 }
 h2 {
-    font-size: 24px;
+    font-size: 23px;
 }
 h3 {
     font-size: 16px;
@@ -3880,9 +3880,7 @@ table.table-mail tr td {
 .text-navy {
     color: #1ab394;
 }
-.text-primary {
-    color: inherit;
-}
+
 .text-success {
     color: #1c84c6;
 }
@@ -4598,9 +4596,7 @@ ul.notes li div {
 .category-list li a .text-navy {
     color: #1ab394;
 }
-.category-list li a .text-primary {
-    color: #1c84c6;
-}
+
 .category-list li a .text-info {
     color: #23c6c8;
 }
@@ -8106,3 +8102,69 @@ body.md-skin {
 .nav_img{
     margin-left: 8%;
 }
+
+
+.embed-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    height: 0;
+    overflow: hidden;
+    max-width: 100%;
+  }
+  
+  .embed-container iframe,
+  .embed-container object,
+  .embed-container embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+
+  /* Animation */
+
+@keyframes fadeInUp {
+    from {
+        transform: translate3d(0,40px,0)
+    }
+
+    to {
+        transform: translate3d(0,0,0);
+        opacity: 1
+    }
+}
+
+@-webkit-keyframes fadeInUp {
+    from {
+        transform: translate3d(0,40px,0)
+    }
+
+    to {
+        transform: translate3d(0,0,0);
+        opacity: 1
+    }
+}
+
+.animated {
+    animation-duration: 1s;
+    animation-fill-mode: both;
+    -webkit-animation-duration: 1s;
+    -webkit-animation-fill-mode: both
+}
+
+.animatedFadeInUp {
+    opacity: 0
+}
+
+.fadeInUp {
+    opacity: 0;
+    animation-name: fadeInUp;
+    -webkit-animation-name: fadeInUp;
+}
+
+
+label {display: block; padding: 5px; position: relative; } /*padding-left: 20px;*/
+label input {display: none;}
+label span {border: 1px solid #ccc; width: 23px; height: 22px; overflow: hidden; line-height: 1; text-align: center; border-radius: 100%; font-size: 12pt; left: 0; top: 50%; margin-top: -15.5px;}
+input:checked + span {background: #ccf; border-color: #ccf;}
