--- a/src/app/components/revision/revisiondetalle.component.html
+++ b/src/app/components/revision/revisiondetalle.component.html
@@ -25,7 +25,7 @@
                     <div class="col-md-12 animated animatedFadeInUp fadeInUp ">
                         <!-- ngFor -->
                         <!--<div class="card animated animatedFadeInUp fadeInUp" style="width: 15.7rem; margin: 6px; padding: 5px;">-->
-                        <form (ngSubmit)="submit()">
+                        <form>
                             <div class="form-row">
                                 <div class="col-md-3" style="padding: 15px;" *ngFor="let revision of revisionDetalle">
                                     <span style="font-size: 17px; padding-right: 10px;">{{ revision.pregunta }}:</span>
