--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -8,11 +8,11 @@
                 
                         <form #loginForm="ngForm" (ngSubmit)="onSubmit();" class="col-md-12 no-padding"> 
                                 <div class="form-row">
-                                    <div class="form-group col-md-10">
+                                    <div class="form-group col-md-10 col-xs-10">
                                         <label>RUT:</label>
                                         <input type="rut" class="form-control" name="rut" #rut="ngModel" [(ngModel)]="user.rut" required>
                                     </div>
-                                    <div class="form-group col-md-2">
+                                    <div class="form-group col-md-2 col-xs-2">
                                         <label>Dígito:</label>
                                         <input type="dv" class="form-control" name="dv" #dv="ngModel" [(ngModel)]="user.digito_verificador" required>
                                     </div>
