cambio en url imagen

--- a/src/app/components/videos/capitulosyvideos.component.html
+++ b/src/app/components/videos/capitulosyvideos.component.html
@@ -26,7 +26,7 @@
                     <div class="row">
                         <!-- ngFor -->
                         <div class="card animated animatedFadeInUp fadeInUp"  style="width: 15.7rem; margin: 6px; padding: 5px;" *ngFor="let capitulo of capitulos">
-                            <a [routerLink]="['/videos/lista',capitulo.id]"><img src="http://localhost:8000/uploads/capitulos/{{ capitulo.url }}" class="card-img-top" alt="..."></a>
+                            <a [routerLink]="['/videos/lista',capitulo.id]"><img src="http://api.premate.cl/uploads/capitulos/{{ capitulo.url }}" class="card-img-top" alt="..."></a>
                             <div class="card-body">
                                 <a [routerLink]="['/videos/lista',capitulo.id]" ><h5 class="card-title">{{ capitulo.nombre }}</h5></a>
                                 <p class="card-text">{{ capitulo.descripcion }}</p>
